--- a/po/fr.po
+++ b/po/fr.po
@@ -8,16 +8,18 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Efl\n"
-"Report-Msgid-Bugs-To: enlightenment-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2013-03-22 17:44+0900\n"
-"PO-Revision-Date: 2013-01-01 17:10+0100\n"
-"Last-Translator: Chidambar Zinnoury <illogict@online.fr>\n"
-"Language-Team: Enlightenment French Team <enlightenment-intl@lists."
-"sourceforge.net>\n"
-"Language: fr\n"
+"Report-Msgid-Bugs-To: $MSGID_BUGS_ADDRESS\n"
+"POT-Creation-Date: 2013-01-05 11:32+0100\n"
+"PO-Revision-Date: 2013-02-05 22:51+0000\n"
+"Last-Translator: ilLogict <illogict@online.fr>\n"
+"Language-Team: Enlightenment French Team <enlightenment-"
+"intl@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2013-02-06 05:17+0000\n"
+"X-Generator: Launchpad (build 16468)\n"
+"Language: fr\n"
 
 #: src/lib/ecore/ecore_getopt.c:87
 msgid "Version:"
@@ -46,11 +48,11 @@ msgstr "Type : "
 
 #: src/lib/ecore/ecore_getopt.c:525
 msgid "Default: "
-msgstr "Par défaut :"
+msgstr "Par défaut : "
 
 #: src/lib/ecore/ecore_getopt.c:552
 msgid "Choices: "
-msgstr "Choix :"
+msgstr "Choix : "
 
 #: src/lib/ecore/ecore_getopt.c:653
 msgid "Options:\n"
@@ -68,7 +70,7 @@ msgstr "ERREUR : option inconnue -%c.\n"
 
 #: src/lib/ecore/ecore_getopt.c:852
 msgid "ERROR: "
-msgstr "ERREUR :"
+msgstr "ERREUR : "
 
 #: src/lib/ecore/ecore_getopt.c:935 src/lib/ecore/ecore_getopt.c:1072
 #: src/lib/ecore/ecore_getopt.c:1088 src/lib/ecore/ecore_getopt.c:1103
@@ -207,34 +209,3 @@ msgstr "Images"
 #: src/lib/efreet/efreet_base.c:188
 msgid "Videos"
 msgstr "Vidéos"
-
-#~ msgid ""
-#~ "\n"
-#~ "   "
-#~ msgstr ""
-#~ "\n"
-#~ "   "
-
-#~ msgid "true"
-#~ msgstr "true"
-
-#~ msgid "false"
-#~ msgstr "false"
-
-#~ msgid "f"
-#~ msgstr "f"
-
-#~ msgid "no"
-#~ msgstr "no"
-
-#~ msgid "off"
-#~ msgstr "off"
-
-#~ msgid "t"
-#~ msgstr "t"
-
-#~ msgid "yes"
-#~ msgstr "yes"
-
-#~ msgid "on"
-#~ msgstr "on"
