evas/events: Add evas_event_input_mouse_move().
This function should be used internally by the input system
(Ecore_Evas_Input) to feed Evas with move events. The x,y event info is
relative to the base of the window/surface, instead of the 0,0 of the
canvas.

This case only happens for now under Wayland, where the 0,0 of the
canvas is translated due to the window decorations that are drawn by the
client.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-04-03  Rafael Antognolli
+
+        * Evas: Added evas_event_input_mouse_move() for internal use only.
+
 2013-04-29  ChunEon Park (Hermet)
 
         * Evas: Added evas_object_image_source_clip_set()/get().
