--- a/po/fr.po
+++ b/po/fr.po
@@ -8,18 +8,18 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Efl\n"
-"Report-Msgid-Bugs-To: $MSGID_BUGS_ADDRESS\n"
-"POT-Creation-Date: 2013-01-05 11:32+0100\n"
+"Report-Msgid-Bugs-To: enlightenment-devel@lists.sourceforge.net\n"
+"POT-Creation-Date: 2013-05-06 11:42+0900\n"
 "PO-Revision-Date: 2013-02-05 22:51+0000\n"
 "Last-Translator: ilLogict <illogict@online.fr>\n"
-"Language-Team: Enlightenment French Team <enlightenment-"
-"intl@lists.sourceforge.net>\n"
+"Language-Team: Enlightenment French Team <enlightenment-intl@lists."
+"sourceforge.net>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Launchpad-Export-Date: 2013-02-06 05:17+0000\n"
 "X-Generator: Launchpad (build 16468)\n"
-"Language: fr\n"
 
 #: src/lib/ecore/ecore_getopt.c:87
 msgid "Version:"
