ecore/wayland: Fix alpha windows on EGL backend.
Now the opaque and input regions are updated on ecore_wl_window_resize,
there's no need to call ecore_wl_window_buffer_attach() for this
anymore.

The checks on alpha and transparent flags were also fixed.

ecore_wl_window_update_size() is now called by ecore_wl_window_resize(),
reducing duplicated code.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-05-06  Rafael Antognolli
+
+        * Ecore/Wayland: Add ecore_wl_window_alpha_set/get().
+        * Ecore/Wayland: Fix alpha windows on EGL backend.
+
 2013-05-06  Cedric Bail
 
         * Evas: Remove SVG loader from inside the merged tree.
