Ecore/Evas: Add evas_event_input_multi_down/up().
These events (from multi-touch) also have information about the mouse
pointer position, so they must be translated by the framespace too.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-05-07  Rafael Antognolli
+
+        * Evas: Added evas_event_input_multi_up/down().
+
 2013-05-06  Rafael Antognolli
 
         * Ecore/Wayland: Add ecore_wl_window_alpha_set/get().
