--- a/NEWS
+++ b/NEWS
@@ -262,3 +262,4 @@ Fixes:
     * Evas textblock: Fixed line size calculation when using multiple fonts.
     * Evas: Fix gif loader can't load image which has normal frames and error frames
     * Ecore_Input_Evas: Fix ecore_input_evas didn't check the device id of mouse event
+    * Edje: fix custom states for proxy parts
