--- a/NEWS
+++ b/NEWS
@@ -266,3 +266,5 @@ Fixes:
     * Edje: fix custom states for proxy parts
     * Evas: Don't try blend on gl backened if the render option is COPY
     * Evas text: Fixed line size calculation when using multiple fonts.
+    * Evas: Fix crash if app use native surface in wrong engine.
+
