[Edje_Entry] Add selection handlers to entry
Add selection handlers to entry.

https://phab.enlightenment.org/D117

Conflicts:

	ChangeLog
	NEWS

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-05-13  Thiep Ha
+
+        * Edje: Added selection handlers to entry.
+
 2013-05-11  Jiyou Park
 
         * Evas: Fix crash if app use native surface in wrong engine.
