--- a/NEWS
+++ b/NEWS
@@ -269,3 +269,4 @@ Fixes:
     * Evas text: Fixed line size calculation when using multiple fonts.
     * Evas: Fix crash if app use native surface in wrong engine.
     * Edje entry: return surrounding string until the start position of selection
+    * Ecore-imf: fix crash when ecore_imf_context_del is called in ecore_imf_context_input_panel_callback_call
