ecore_pipe.c: fixed fd handler increasing issue.
Call _ecore_pipe_unhandle() when you return from _ecore_pipe_read() or the fd will never be closed.
This fixed increasing numbers of fd handler issue when you call ecore_pipe_add/del repeatedly.
In that case, reusing ecore_pipe is recommended though.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-05-22  Daniel Juyung Seo (SeoZ)
+
+        * Fix fd handler increase issue when ecore_pipe_add/del is called repeatedly.
+
 2013-05-22  ChunEon Park (Hermet)
 
         * Edje textblock: keep the text styles when new font by the text class is applied.
