--- a/NEWS
+++ b/NEWS
@@ -272,3 +272,4 @@ Fixes:
     * Ecore-imf: fix crash when ecore_imf_context_del is called in ecore_imf_context_input_panel_callback_call
     * Edje textblock: Fixed issue with quoted formats.
     * Edje textblock: Keep the text styles when new font by the text class is applied.
+    * Fix fd handler increase issue when ecore_pipe_add/del is called repeatedly.
