--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2013-05-24  Guillaume Friloux
+        * Fix use of ecore_con_server_client_limit_set() (counter never
+          decreased).
+        * Fix use of ecore_con_client_timeout_set() and
+          ecore_con_server_timeout_set() that makes timeout on connections
+          even if you sent data.
+        * Fix cl->start_time (initialization missing). So now 
+          ecore_con_client_uptime_get() is working.
+
 2013-05-22  Daniel Juyung Seo (SeoZ)
 
         * Fix fd handler increase issue when ecore_pipe_add/del is called repeatedly.
