--- a/NEWS
+++ b/NEWS
@@ -273,3 +273,8 @@ Fixes:
     * Edje textblock: Fixed issue with quoted formats.
     * Edje textblock: Keep the text styles when new font by the text class is applied.
     * Fix fd handler increase issue when ecore_pipe_add/del is called repeatedly.
+    * Fix use of ecore_con_server_client_limit_set() (counter never decreased).
+    * Fix use of ecore_con_client_timeout_set() and ecore_con_server_timeout_set() that makes timeout on 
+      connections even if you sent data.
+    * Fix cl->start_time (initialization missing). So now
+      ecore_con_client_uptime_get() is working.
