ecore_con: Server start time was not initialized correctly
ecore_con_event_server_add() is never called (at least not in the
standard TCP connection case, so initialize svr->start_time in
ecore_con_server_add(). This shouldn't regress any other behaviour as
this is done at the very beginning and any later change to start_time
will still happen.

Signed-off-by: Daniel Willmann <d.willmann@samsung.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-05-24  Daniel Willmann
+        * Fix srv->start_time (initialization missing). So now 
+          ecore_con_server_uptime_get() is working for plain TCP connections.
+
 2013-05-24  Guillaume Friloux
         * Fix use of ecore_con_server_client_limit_set() (counter never
           decreased).
