--- a/NEWS
+++ b/NEWS
@@ -278,3 +278,5 @@ Fixes:
       connections even if you sent data.
     * Fix cl->start_time (initialization missing). So now
       ecore_con_client_uptime_get() is working.
+    * Fix srv->start_time (initialization missing). So now
+      ecore_con_server_uptime_get() is working for plain TCP connections.
