add eina_str_convert_len() for converting from encodings which contain '\0' characters
eina_str_convert() is GUARANTEED to break when doing any such encoding (eg. UTF16->UTF8). I don't know who added the original function, but this is very bad, and we should almost certainly deprecate eina_str_convert() so people are not surprised when they are unable to convert strings as expected.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-05-29  Mike Blumenkrantz
+
+        * Added eina_str_convert_len() to work around broken eina_str_convert()
+
 2013-05-28  ChunEon Park (Hermet)
 
         * Fix textblock to render pre again if it needs to relayouting.
