--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-05-31  Jérémy Zurcher
+        * Added --enable-image-loader-xyz=yes|static|auto|no for all loaders
+        * compilation fail if not found and option set to yes or static
+
 2013-05-29  Mike Blumenkrantz
 
         * Added eina_str_convert_len() to work around broken eina_str_convert()
