edje - support edc proxy.source_clip

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 2013-05-31  ChunEon Park (Hermet)
-        * Edje: support edc proxy.source_visible
+        * Edje: support edc proxy.source_visible, proxy.source_clip
 
 2013-05-31  Jérémy Zurcher
         * Added --enable-image-loader-xyz=yes|static|auto|no for all loaders
