--- a/ChangeLog
+++ b/ChangeLog
@@ -3,12 +3,24 @@
         * Fix edje min size calc to propagate min size calcs to GROUP
         items swallowed in automatically.
 
+2013-05-31  Carsten Haitzler (The Rasterman)
+
+        * Fix ascent/descent in textblock when fontsets are used to be
+        superset of all ascent/descents.
+
 2013-05-31  ChunEon Park (Hermet)
+
         * Edje: support edc proxy.source_visible, proxy.source_clip
 
 2013-05-31  Jérémy Zurcher
+
         * Added --enable-image-loader-xyz=yes|static|auto|no for all loaders
         * compilation fail if not found and option set to yes or static
+
+2013-05-29  Carsten Haitzler (The Rasterman)
+
+        * Fix evas gl partial swap to keep full re-render rects if
+        switching mode automatically.
 
 2013-05-29  Mike Blumenkrantz
 
@@ -25,10 +37,12 @@
         * Add EDJE_INPUT_PANEL_LAYOUT_DATETIME layout
 
 2013-05-24  Daniel Willmann
+
         * Fix srv->start_time (initialization missing). So now 
           ecore_con_server_uptime_get() is working for plain TCP connections.
 
 2013-05-24  Guillaume Friloux
+
         * Fix use of ecore_con_server_client_limit_set() (counter never
           decreased).
         * Fix use of ecore_con_client_timeout_set() and
@@ -38,6 +52,7 @@
           ecore_con_client_uptime_get() is working.
 
 2013-05-22  David Seikel (onefang)
+
 	* Edje Lua: Stop leaking evas objects in Lua.
 
 2013-05-22  Daniel Juyung Seo (SeoZ)
@@ -48,9 +63,21 @@
 
         * Edje textblock: keep the text styles when new font by the text class is applied.
 
+2013-05-20  Carsten Haitzler (The Rasterman)
+
+        * Improve memory footpriny by only creating evasgl context on demand.
+
+2013-05-18  Carsten Haitzler (The Rasterman)
+
+        * Reduce waiting on gl so it cvan fully run async from cpu.
+
 2013-05-16  Tom Hacohen
 
         * Edje textblock: Fixed issue with quoted formats.
+
+2013-05-15  Carsten Haitzler (The Rasterman)
+
+        * Evas leak in dri/drm swapbuf removed
 
 2013-05-14  Jihoon Kim
 
@@ -65,6 +92,14 @@
 
         * Evas: Fix crash if app use native surface in wrong engine.
 
+2013-05-10  Carsten Haitzler (The Rasterman)
+
+        * Fix string leak in evas dri/drm swapbuf
+        * Fix pulseaudio crash on exit in ecore_audio (leak instead).
+        * Fix eet_mmap to use caches for lookup so it shares with everyone
+        * Improve ecore_audio use of eo api to be more batching
+        * Fix edje multisense segv (free non-malloced data from eet).
+
 2013-05-10  Tom Hacohen
 
         * Evas text: Fixed line size calculation when using multiple
@@ -74,11 +109,23 @@
 
         * Evas: don't try blend on gl backened if the render option is COPY
 
+2013-05-08  Carsten Haitzler (The Rasterman)
+
+        * Fix evas proxy_unset of NULL image.
+        * Fix x11 selection trailing nul byte in text
+
 2013-05-08  Mike Blumenkrantz
 
         * Edje: fix custom states for proxy parts
         * Edje: add embryo fill support for proxy parts
 
+2013-05-07  Carsten Haitzler (The Rasterman)
+
+        * Fix slowness in glmap/unmap buffer by default in evas gl engine
+        * Fix evas segv on image del if loader is NULL
+        * Fix evas swapregion rect to account for rotation
+        * Edje entry emtis signals on keydown/up for theme to use
+    
 2013-05-07  Rafael Antognolli
 
         * Evas: Added evas_event_input_multi_up/down().
@@ -104,14 +151,37 @@
 
         * Evas: Fix gif loader can't load image which has normal frames and error frames
 
+2013-05-04  Carsten Haitzler (The Rasterman)
+
+        * Fix "always scissor" to not break map in evas gl engine.
+
+2013-05-03  Carsten Haitzler (The Rasterman)
+
+        * Turn on scissors always to abe able to to partual render on
+        some GL implementations properly.
+
 2013-04-03  Rafael Antognolli
 
         * Evas: Added evas_event_input_mouse_move() for internal use only.
         * Evas: Added evas_event_input_multi_move() for internal use only.
 
+2013-05-02  Carsten Haitzler (The Rasterman)
+
+        * Evas gl engine - dont map dri/drm buffer unless we are going
+        to render.
+
+2013-04-30  Carsten Haitzler (The Rasterman)
+
+        * Fix issue when wchar_t is signed and eina_unicode does
+        negative array lookups.
+
 2013-04-29  ChunEon Park (Hermet)
 
         * Evas: Added evas_object_image_source_clip_set()/get().
+
+2013-04-25  Carsten Haitzler (The Rasterman)
+
+        * Add --with-api=XXX (both|legacy|eo)
 
 2013-04-25  Tom Hacohen
 
@@ -121,6 +191,15 @@
 2013-04-25  Jihoon Kim
 
         * Edje entry: remove duplicated ecore_imf_context_reset in adjusting the selection
+
+2013-04-24  Carsten Haitzler (The Rasterman)
+
+        * Rejig 32bit eoid allocation to 5.5.12.
+
+2013-04-23  Carsten Haitzler (The Rasterman)
+
+        * Make eoid use mmaped tables from anonymous memory for safety.
+        * Rejig 64bit eoid allocation to use much less memory (11.11.12).
 
 2013-04-22  Mike Blumenkrantz
 
@@ -137,6 +216,14 @@
         64bit as the rest of ecore-x keeps types to their REAL sizes (ints),
         but xlib uses longs (change size - eg 64bit even though protocol-wise
         the data is DEFINEd as 32bit)
+
+2013-04-18  Carsten Haitzler (The Rasterman)
+
+        * Fix nvidia texture from pixmap config depth match to be looser to
+        avoid non-matches.
+        * Fix evas gl engine to work in 16bpp nicely.
+        * Fix native surface to be more anal about depth matching.
+        * Fix eeze sensors to not segv on shutdown
 
 2013-04-19  Jihoon Kim (jihoon)
 
