evas: correctly detect if loader support asynchronous preloading.
This is an astonishing bug, I wonder since how long it has been there. It
is basically due to the use of void * and a wrong cast. Type checking is
clearly useful, let's use it more !

--- a/NEWS
+++ b/NEWS
@@ -317,4 +317,4 @@ Fixes:
     * Fix evas gl engine to work in 16bpp nicely.
     * Fix native surface to be more anal about depth matching.
     * Fix eeze sensors to not segv on shutdown
-        
+    * Evas: correctly detect if a loader support asynchronous preloading.
