--- a/NEWS
+++ b/NEWS
@@ -27,7 +27,8 @@ Additions:
      - Add eina_log_timing()
      - Add eina_inlist_first
      - Add eina_inlist_last
-     - Added eina_str_convert_len() to work around broken eina_str_convert()
+     - Add eina_str_convert_len() to work around broken eina_str_convert()
+     - Add eina_file_dup()
     * eet:
      - Add eet_mmap()
      - Add eet_data_descriptor_name_get()
