--- a/AUTHORS
+++ b/AUTHORS
@@ -124,6 +124,7 @@ Leandro Dorileo (dorileo) <dorileo@profusion.mobi>
 Patryk Kaczmarek <patryk.k@samsung.com>
 Zbigniew Kosinski <z.kosinski@samsung.com>
 Paulo Cavalcanti <paulo.cavalcanti@linux.intel.com>
+Jean-Philippe Andre <jp.andre@samsung.com>
 
 
 Ecore
