--- a/NEWS
+++ b/NEWS
@@ -326,3 +326,4 @@ Fixes:
     * Fix native surface to be more anal about depth matching.
     * Fix eeze sensors to not segv on shutdown
     * Evas: correctly detect if a loader support asynchronous preloading.
+    * Evas: improve stability of Evas_Cserve2.
