--- a/NEWS
+++ b/NEWS
@@ -187,6 +187,7 @@ Improvements:
     * Edje entry emtis signals on keydown/up for theme to use
     * Turn on scissors always to abe able to to partual render on some GL implementations properly.
     * Evas gl engine - dont map dri/drm buffer unless we are going to render.
+    * Partial rendering support in evas for several gl drivers.
 
 Fixes:
     * Fix a memory leak in ecore_con_dns when using ecore_con_server_connect
