--- a/NEWS
+++ b/NEWS
@@ -332,4 +332,5 @@ Fixes:
     * Evas: improve stability of Evas_Cserve2.
     * Evas: Fix gif cannot decode alpha value correctly.
     * Evas: Fix bs if app call image object update add after call api like fileset.
+    * Evas: Fix evas_gl direct rendering to support partial redraw.
 
