--- a/NEWS
+++ b/NEWS
@@ -189,7 +189,7 @@ Improvements:
     * Evas gl engine - dont map dri/drm buffer unless we are going to render.
     * Partial rendering support in evas for several gl drivers.
     * edje: use eo array of callbacks to reduce callbacks memory footprint.
-    * evas: use eo array of callbacks to reduce callbacks memory footprint of Evas_Object_Box.
+    * evas: use eo array of callbacks to reduce callbacks memory footprint of Evas_Object_Box and Evas_Object_Table.
 
 Fixes:
     * Fix a memory leak in ecore_con_dns when using ecore_con_server_connect
