evas_convert_colorspace: Be nice and actually return the converted data
Fixes a memory leaks in evas_common_convert_yuv_42* and actually makes
these functions more useful. It's a win-win.

Signed-off-by: Daniel Willmann <d.willmann@samsung.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-06-26  Daniel Willmann
+
+	* Evas: Fix evas_common_convert_yuv_42* functions to actually return
+	the converted data.
+
 2013-06-25  Tom Hacohen
 
 	* Evas textblock: Fixed issue with textblocks without fonts
