* Evas: Fix jpeg loader cannot deal with exif information correctly

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-06-28  Jiyoun Park
+
+    * Evas: Fix jpeg loader cannot deal with exif information correctly
+
 2013-06-26  Daniel Willmann
 
 	* Evas: Fix evas_common_convert_yuv_42* functions to actually return
