--- a/NEWS
+++ b/NEWS
@@ -341,3 +341,4 @@ Fixes:
     * Evas: Fix evas_gl direct rendering to support partial redraw.
     * Evas textblock: Fixed issue with textblocks without fonts segfaulting.
     * Evas: Fix evas_common_convert_yuv_42* functions to actually return the converted data.
+    * Evas: Fix jpeg loader cannot deal with exif information correctly
