--- a/NEWS
+++ b/NEWS
@@ -195,6 +195,7 @@ Improvements:
     * evas: use eo array of callbacks to reduce callbacks memory footprint of Evas_Object_Box and Evas_Object_Table.
     * evas: optimized path for when map use the same color for all corner.
     * Edje entry: Move cursor to correct position when selection handlers are pressed.
+    * eet: force thread to always run during eet_cache_concurrency test.
 
 Fixes:
     * Fix a memory leak in ecore_con_dns when using ecore_con_server_connect
