--- a/NEWS
+++ b/NEWS
@@ -33,6 +33,7 @@ Additions:
      - Add eina_file_dup()
      - Add eina_tiler_area_size_set(), eina_tiler_strict_set(), eina_tiler_area_size_get()
      - Add eina_file_map_populate()
+     - Add eina_tiler_empty()
     * Eet:
      - Add eet_mmap()
      - Add eet_data_descriptor_name_get()
