add ECORE_X_SYNC env variable for xlib backend

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-07-18  Mike Blumenkrantz
+
+        * Ecore-X: add ECORE_X_SYNC env variable for xlib backend
+
 2013-07-17  Guillaume Friloux
         * Fix ecore_con_server_timeout_set(). It was changing the 
           timeout value, but not the timer.
