edje: Add missing ChangeLog and NEWS of signal callbacks fixes

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,11 @@
 
 	* Edje: add threshold to draggable part.
 
+2013-07-18 José Roberto de Souza
+
+    * Edje: Correctly set match flag in _edje_signal_callback_move_last()
+    * Fix size calculation of flags of signal callbacks
+
 2013-07-18  Mike Blumenkrantz
 
         * Ecore-X: add ECORE_X_SYNC env variable for xlib backend
