--- a/NEWS
+++ b/NEWS
@@ -382,6 +382,8 @@ Fixes:
      - Fix edje min size calc to calc sub GROUP parts too.
      - Fix edje multisense segv (free non-malloced data from eet).
      - Fix some logic issue when using fixed point path.
+     - Correctly set match flag of signal callbacks
+     - Fix size calculation of flags of signal callbacks
     * Efreet:
      - Fix desktop command parsing of https.
     * Emotion:
